# mesh-evaluation

./: CMakeLists.txt  main.cpp
triangle_point/: CMakeLists.txt  data_structures.cpp  data_structures.h  poitri.cpp  poitri.h  vec.cpp
